@startuml

title __LABB's Class Diagram__\n

    namespace abb {
      class Labb.Application {
          {static} + main()
      }
    }


    namespace abb {
      class Labb.CarController {
          + CarController()
          - initListeners()
      }
    }


    namespace abb {
      interface Labb.IObservable {
          {abstract} + attach()
          {abstract} + detach()
          {abstract} + notifyAllObservers()
      }
    }


    namespace abb {
      interface Labb.IObserver {
          {abstract} + observerUpdate()
      }
    }


    namespace abb {
      class Labb.Main {
          {static} + main()
          ~ program()
      }
    }


  Labb.CarController o-- Labb.View.CarView : frame
  Labb.CarController o-- Labb.Model.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
